--- a/notebooks/lemmatisation.ipynb
+++ b/notebooks/lemmatisation.ipynb
@@ -8,8 +8,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour obtenir le résultat, il vous suffit d’exécuter successivement **toutes les cellules** de ce notebook.<br><br>\n",
+    "Pour cela, cliquez sur le **bouton “lecture”** à gauche de chaque cellule, ou utilisez le raccourci **Maj + Entrée**.<br><br>\n",
+    "Il est très important de **respecter l’ordre d’exécution**, en allant de la première cellule jusqu’à la dernière."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Préparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans la première cellule, nous installons la bibliothèque **`stanza`**. Une bibliothèque est un ensemble de fonctions ou de commandes prêtes à l’emploi.<br><br>\n",
+    "**`Stanza`** est une bibliothèque capable d’effectuer la **lemmatisation** et l’**analyse morpho-syntaxique**, c’est-à-dire l’identification des parties du discours. Elle est [adaptée à de nombreuses langues](https://stanfordnlp.github.io/stanza/performance.html) et, pour le latin, elle propose quatre modèles différents.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -34,10 +58,7 @@
       "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/site-packages (from requests->stanza) (3.10)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/site-packages (from requests->stanza) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/site-packages (from requests->stanza) (2025.1.31)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/site-packages (from sympy->torch>=1.3.0->stanza) (1.3.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.1.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/usr/local/opt/python@3.11/bin/python3.11 -m pip install --upgrade pip\u001b[0m\n"
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/site-packages (from sympy->torch>=1.3.0->stanza) (1.3.0)\n"
      ]
     }
    ],
@@ -46,49 +67,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/main/resources_1.10.0.json: 434kB [00:00, 3.11MB/s]                    \n",
-      "2025-10-26 23:22:35 INFO: Downloaded file to /Users/sy/stanza_resources/resources.json\n",
-      "2025-10-26 23:22:35 INFO: Downloading these customized packages for language: la (Latin)...\n",
-      "================================\n",
-      "| Processor | Package          |\n",
-      "--------------------------------\n",
-      "| tokenize  | perseus          |\n",
-      "| mwt       | perseus          |\n",
-      "| pos       | perseus_nocharlm |\n",
-      "| lemma     | perseus_nocharlm |\n",
-      "| depparse  | perseus_nocharlm |\n",
-      "| pretrain  | conll17          |\n",
-      "================================\n",
-      "\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/tokenize/perseus.pt: 100%|██████████| 626k/626k [00:00<00:00, 1.25MB/s]\n",
-      "2025-10-26 23:22:36 INFO: Downloaded file to /Users/sy/stanza_resources/la/tokenize/perseus.pt\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/mwt/perseus.pt: 100%|██████████| 461k/461k [00:00<00:00, 525kB/s]\n",
-      "2025-10-26 23:22:37 INFO: Downloaded file to /Users/sy/stanza_resources/la/mwt/perseus.pt\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/pos/perseus_nocharlm.pt: 100%|██████████| 19.2M/19.2M [00:09<00:00, 2.00MB/s]\n",
-      "2025-10-26 23:22:48 INFO: Downloaded file to /Users/sy/stanza_resources/la/pos/perseus_nocharlm.pt\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/lemma/perseus_nocharlm.pt: 100%|██████████| 2.31M/2.31M [00:01<00:00, 1.51MB/s]\n",
-      "2025-10-26 23:22:50 INFO: Downloaded file to /Users/sy/stanza_resources/la/lemma/perseus_nocharlm.pt\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/depparse/perseus_nocharlm.pt: 100%|██████████| 101M/101M [00:52<00:00, 1.94MB/s] \n",
-      "2025-10-26 23:23:43 INFO: Downloaded file to /Users/sy/stanza_resources/la/depparse/perseus_nocharlm.pt\n",
-      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/pretrain/conll17.pt: 100%|██████████| 107M/107M [00:35<00:00, 3.01MB/s] \n",
-      "2025-10-26 23:24:19 INFO: Downloaded file to /Users/sy/stanza_resources/la/pretrain/conll17.pt\n",
-      "2025-10-26 23:24:19 INFO: Finished downloading models and saved to /Users/sy/stanza_resources\n"
-     ]
-    }
-   ],
    "source": [
-    "import stanza\n",
-    "stanza.download('la', package=\"perseus\")"
+    "Nous importons maintenant la bibliothèque **`stanza`**."
    ]
   },
   {
@@ -97,23 +79,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "canticum = \"Sicut lilium inter spinas, sic amica mea inter filias. Sicut malus inter ligna silvarum, sic dilectus meus inter filios. Sub umbra illius quem desideraveram sedi, et fructus ejus dulcis gutturi meo.\""
+    "import stanza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons maintenant créer une variable contenant quelques versets du deuxième chapitre du Cantique des Cantiques."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "canticum = \"Sicut lilium inter spinas, sic amica mea inter filias. \" \\\n",
+    "\"Sicut malus inter ligna silvarum, sic dilectus meus inter filios. \" \\\n",
+    "\"Sub umbra illius quem desideraveram sedi, et fructus ejus dulcis gutturi meo.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette cellule crée un **pipeline stanza**, c’est-à-dire une chaîne de traitement. <br>\n",
+    "Ici, on indique que la langue est le latin (`lang='la'`) et que l’on utilise le **modèle «perseus»**.<br><br>\n",
+    "Le paramètre `processors` précise les étapes du traitement :\n",
+    "\n",
+    "* `tokenize` : découper le texte en mots (*tokens*),\n",
+    "* `pos` : identifier la partie du discours (nom, verbe, adjectif, etc.),\n",
+    "* `lemma` : ramener chaque mot à sa forme de base (lemmatisation),\n",
+    "* `depparse` : analyser les relations syntaxiques entre les mots.\n",
+    "\n",
+    "Cela peut prendre un certain temps, car les modèles sont assez volumineux.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-26 23:24:19 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n",
-      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/main/resources_1.10.0.json: 434kB [00:00, 25.0MB/s]                    \n",
-      "2025-10-26 23:24:20 INFO: Downloaded file to /Users/sy/stanza_resources/resources.json\n",
-      "2025-10-26 23:24:20 WARNING: Language la package perseus expects mwt, which has been added\n",
-      "2025-10-26 23:24:21 INFO: Loading these models for language: la (Latin):\n",
+      "2025-10-26 23:53:18 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n",
+      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/main/resources_1.10.0.json: 434kB [00:00, 14.7MB/s]                    \n",
+      "2025-10-26 23:53:18 INFO: Downloaded file to /Users/sy/stanza_resources/resources.json\n",
+      "2025-10-26 23:53:18 WARNING: Language la package perseus expects mwt, which has been added\n",
+      "2025-10-26 23:53:20 INFO: Loading these models for language: la (Latin):\n",
       "================================\n",
       "| Processor | Package          |\n",
       "--------------------------------\n",
@@ -124,23 +147,31 @@
       "| depparse  | perseus_nocharlm |\n",
       "================================\n",
       "\n",
-      "2025-10-26 23:24:21 INFO: Using device: cpu\n",
-      "2025-10-26 23:24:21 INFO: Loading: tokenize\n",
-      "2025-10-26 23:24:24 INFO: Loading: mwt\n",
-      "2025-10-26 23:24:24 INFO: Loading: pos\n",
-      "2025-10-26 23:24:28 INFO: Loading: lemma\n",
-      "2025-10-26 23:24:28 INFO: Loading: depparse\n",
-      "2025-10-26 23:24:29 INFO: Done loading processors!\n"
+      "2025-10-26 23:53:20 INFO: Using device: cpu\n",
+      "2025-10-26 23:53:20 INFO: Loading: tokenize\n",
+      "2025-10-26 23:53:22 INFO: Loading: mwt\n",
+      "2025-10-26 23:53:22 INFO: Loading: pos\n",
+      "2025-10-26 23:53:25 INFO: Loading: lemma\n",
+      "2025-10-26 23:53:25 INFO: Loading: depparse\n",
+      "2025-10-26 23:53:26 INFO: Done loading processors!\n"
      ]
     }
    ],
    "source": [
-    "nlp_stanza = stanza.Pipeline(lang='la', package=\"perseus\", processors='tokenize,pos,lemma, depparse')"
+    "nlp_stanza = stanza.Pipeline(lang='la', package=\"perseus\", processors='tokenize, pos, lemma, depparse')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La commande `nlp_stanza(canticum)` lance le traitement : `Stanza` segmente le texte, identifie les catégories grammaticales, attribue à chaque mot sa lemme, puis établit les relations syntaxiques entre eux.<br>\n",
+    "Le résultat est enregistré dans une nouvelle variable appelée `canticum_lemmatised`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,28 +179,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XXXXX Sicut lilium inter spinas, sic amica mea inter filias. XXXXX\n",
-      "XXXXX Sicut malus inter ligna silvarum, sic dilectus meus inter filios. XXXXX\n",
-      "XXXXX Sub umbra illius quem desideraveram sedi, et fructus ejus dulcis gutturi meo. XXXXX\n"
-     ]
-    }
-   ],
    "source": [
-    "for sent in canticum_lemmatised.sentences:\n",
-    "  print(\"XXXXX \"+sent.text+\" XXXXX\")"
+    "Cette cellule parcourt le texte que nous avons analysé avec `stanza` et affiche, pour chaque mot, trois informations :\n",
+    "\n",
+    "* **`token.text`** → la forme originale du mot telle qu’elle apparaît dans le texte,\n",
+    "* **`token.lemma`** → sa **lemme**, c’est-à-dire la forme de base du mot,\n",
+    "* **`token.pos`** → sa **catégorie grammaticale** (nom, verbe, adjectif, etc.).\n",
+    "\n",
+    "Autrement dit, cette boucle permet de visualiser le résultat de la lemmatisation et de l’analyse morpho-syntaxique pour chaque mot du passage."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +247,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyse de la Vulgate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette cellule télécharge deux fichiers depuis le dépôt GitHub :\n",
+    "\n",
+    "1. **`stopwords_lat.txt`** — une liste de *mots vides* (mots très fréquents comme *et, in, de,* etc.),\n",
+    "   que l’on exclut souvent des analyses statistiques, car ils n’apportent pas de sens lexical propre. Cette liste est créée par [Aurélien Berra](https://github.com/aurelberra/stopwords/tree/master) ;\n",
+    "2. **`vulgata_full_clean.txt`** — le texte complet de la Vulgate nettoyé de ses références de chapitres et de versets.\n",
+    "\n",
+    "Ensuite :\n",
+    "\n",
+    "* la variable **`stopwords`** contient tous les mots vides sous forme de liste (un mot par ligne) ;\n",
+    "* la variable **`vulgata`** contient tout le texte de la Vulgate sous forme d’une grande chaîne de caractères.\n",
+    "\n",
+    "Autrement dit, cette cellule prépare les **données textuelles** et la **liste de mots à ignorer** pour les étapes suivantes de l’analyse."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -243,8 +292,51 @@
     }
    ],
    "source": [
-    "!wget https://raw.githubusercontent.com/OdysseusPolymetis/digital_classics_course/refs/heads/main/stopwords_lat.txt\n",
-    "stopwords = open(\"/content/stopwords_gk.txt\",'r',encoding=\"utf8\").read().split(\"\\n\")"
+    "!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/stopwords_lat.txt\n",
+    "!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/vulgata_full_clean.txt\n",
+    "\n",
+    "stopwords = open(\"/content/stopwords_lat.txt\",'r',encoding=\"utf8\").read().split(\"\\n\")\n",
+    "vulgata = open(\"/content/vulgata_full_clean.txt\",'r',encoding=\"utf8\").read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-27 00:03:21 INFO: Checking for updates to resources.json in case models have been updated.  Note: this behavior can be turned off with download_method=None or download_method=DownloadMethod.REUSE_RESOURCES\n",
+      "Downloading https://raw.githubusercontent.com/stanfordnlp/stanza-resources/main/resources_1.10.0.json: 434kB [00:00, 22.7MB/s]                    \n",
+      "2025-10-27 00:03:22 INFO: Downloaded file to /Users/sy/stanza_resources/resources.json\n",
+      "2025-10-27 00:03:22 WARNING: Language la package default expects mwt, which has been added\n",
+      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/tokenize/ittb.pt: 100%|██████████| 624k/624k [00:00<00:00, 4.49MB/s]\n",
+      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/mwt/ittb.pt: 100%|██████████| 458k/458k [00:00<00:00, 6.09MB/s]\n",
+      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/pos/ittb_nocharlm.pt: 100%|██████████| 23.9M/23.9M [00:04<00:00, 5.77MB/s]\n",
+      "Downloading https://huggingface.co/stanfordnlp/stanza-la/resolve/v1.10.0/models/lemma/ittb_nocharlm.pt: 100%|██████████| 3.21M/3.21M [00:00<00:00, 4.00MB/s]\n",
+      "2025-10-27 00:03:30 INFO: Loading these models for language: la (Latin):\n",
+      "=============================\n",
+      "| Processor | Package       |\n",
+      "-----------------------------\n",
+      "| tokenize  | ittb          |\n",
+      "| mwt       | ittb          |\n",
+      "| pos       | ittb_nocharlm |\n",
+      "| lemma     | ittb_nocharlm |\n",
+      "=============================\n",
+      "\n",
+      "2025-10-27 00:03:30 INFO: Using device: cpu\n",
+      "2025-10-27 00:03:30 INFO: Loading: tokenize\n",
+      "2025-10-27 00:03:30 INFO: Loading: mwt\n",
+      "2025-10-27 00:03:30 INFO: Loading: pos\n",
+      "2025-10-27 00:03:35 INFO: Loading: lemma\n",
+      "2025-10-27 00:03:35 INFO: Done loading processors!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlp_stanza = stanza.Pipeline(lang='la', processors='tokenize, pos, lemma')"
    ]
   },
   {
