--- a/notebooks/lemmatisation.ipynb
+++ b/notebooks/lemmatisation.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "Pour obtenir le résultat, il vous suffit d’exécuter successivement **toutes les cellules** de ce notebook.<br><br>\n",
-    "Pour cela, cliquez sur le **bouton “lecture”** à gauche de chaque cellule, ou utilisez le raccourci **Maj + Entrée**.<br><br>\n",
+    "Pour cela, cliquez sur le **bouton «lecture»** à gauche de chaque cellule, ou utilisez le raccourci **Maj + Entrée**.<br><br>\n",
     "Il est très important de **respecter l’ordre d’exécution**, en allant de la première cellule jusqu’à la dernière."
    ]
   },
@@ -70,16 +70,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous importons maintenant la bibliothèque **`stanza`**."
+    "Nous importons maintenant la bibliothèque **`stanza`** et deux autres bibliothèques."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import stanza"
+    "import stanza\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n"
    ]
   },
   {
@@ -250,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyse de la Vulgate"
+    "# Analyse de la Vulgate (Genesis)"
    ]
   },
   {
@@ -280,23 +282,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-10-26 23:27:03--  https://raw.githubusercontent.com/OdysseusPolymetis/digital_classics_course/refs/heads/main/stopwords_lat.txt\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+      "--2025-10-27 00:04:15--  https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/stopwords_lat.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 35385 (35K) [text/plain]\n",
-      "stopwords_lat.txt: Read-only file system\n",
+      "Length: 31320 (31K) [text/plain]\n",
+      "Saving to: ‘stopwords_lat.txt’\n",
       "\n",
-      "Cannot write to ‘stopwords_lat.txt’ (Read-only file system).\n"
+      "stopwords_lat.txt   100%[===================>]  30,59K  --.-KB/s    in 0,01s   \n",
+      "\n",
+      "2025-10-27 00:04:15 (2,20 MB/s) - ‘stopwords_lat.txt’ saved [31320/31320]\n",
+      "\n",
+      "--2025-10-27 00:04:16--  https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/vulgata_full_clean.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 4014585 (3,8M) [text/plain]\n",
+      "Saving to: ‘vulgata_full_clean.txt’\n",
+      "\n",
+      "vulgata_full_clean. 100%[===================>]   3,83M  5,88MB/s    in 0,7s    \n",
+      "\n",
+      "2025-10-27 00:04:18 (5,88 MB/s) - ‘vulgata_full_clean.txt’ saved [4014585/4014585]\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/content/stopwords_lat.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/stopwords_lat.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/vulgata_full_clean.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m stopwords \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/content/stopwords_lat.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m vulgata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/content/vulgata_full_clean.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mread()\n",
+      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/stopwords_lat.txt'"
      ]
     }
    ],
    "source": [
     "!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/stopwords_lat.txt\n",
-    "!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/vulgata_full_clean.txt\n",
+    "#!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/vulgata_full_clean.txt\n",
+    "!wget https://raw.githubusercontent.com/Svetlana-Yatsyk/JdE_RMBLF_texto/main/data/Genesis.txt\n",
     "\n",
     "stopwords = open(\"/content/stopwords_lat.txt\",'r',encoding=\"utf8\").read().split(\"\\n\")\n",
-    "vulgata = open(\"/content/vulgata_full_clean.txt\",'r',encoding=\"utf8\").read()"
+    "#vulgata = open(\"/content/vulgata_full_clean.txt\",'r',encoding=\"utf8\").read()\n",
+    "genesis = open(\"/content/Genesis.txt\",'r',encoding=\"utf8\").read()"
    ]
   },
   {
@@ -340,11 +370,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette cellule définit une fonction qui traite le texte par lots («batches») à l’aide du modèle stanza, \n",
+    "effectue la tokenisation, la lemmatisation et l’analyse morpho-syntaxique,\n",
+    "puis enregistre les résultats dans un fichier CSV contenant pour chaque mot sa forme, sa lemme et sa catégorie grammaticale."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def batch_process(text, nlp, batch_size=100, output_prefix=\"genesis\"):\n",
+    "    paragraphs = [p for p in text.split('\\n') if p.strip()]\n",
+    "    words = []\n",
+    "\n",
+    "    for i in range(0, len(paragraphs), batch_size):\n",
+    "        batch_text = '\\n'.join(paragraphs[i:i + batch_size])\n",
+    "        doc = nlp(batch_text)\n",
+    "        words.extend(\n",
+    "            {\n",
+    "                \"word\": w.text,\n",
+    "                \"lemma\": w.lemma,\n",
+    "                \"pos\": w.pos\n",
+    "            }\n",
+    "            for s in doc.sentences\n",
+    "            for w in s.words\n",
+    "            if w.lemma\n",
+    "        )\n",
+    "\n",
+    "    df = pd.DataFrame(words)\n",
+    "    outdir = Path(\".\")\n",
+    "    outdir.mkdir(exist_ok=True)\n",
+    "\n",
+    "    # Save CSV\n",
+    "    csv_path = outdir / f\"{output_prefix}_lemmatized.csv\"\n",
+    "    df.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "    # Create TXTs\n",
+    "    (outdir / f\"{output_prefix}_lemmas.txt\").write_text(\n",
+    "        \"\\n\".join(df[\"lemma\"].tolist()), encoding=\"utf-8\"\n",
+    "    )\n",
+    "\n",
+    "    (outdir / f\"{output_prefix}_types.txt\").write_text(\n",
+    "        \"\\n\".join(sorted(set(df[\"lemma\"]))), encoding=\"utf-8\"\n",
+    "    )\n",
+    "\n",
+    "    (outdir / f\"{output_prefix}_tokens.txt\").write_text(\n",
+    "        \"\\n\".join(df[\"word\"].tolist()), encoding=\"utf-8\"\n",
+    "    )\n",
+    "\n",
+    "    print(\" Fichiers enregistrés :\")\n",
+    "    print(f\" - {csv_path}\")\n",
+    "    print(f\" - {output_prefix}_lemmas.txt\")\n",
+    "    print(f\" - {output_prefix}_types.txt\")\n",
+    "    print(f\" - {output_prefix}_tokens.txt\")\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On lance le traitement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genesis_lem = batch_process(genesis, nlp_stanza)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette cellule parcourt la liste des tokens issus de la lemmatisation. Pour chaque mot, elle extrait sa **forme originale** (`form`) et sa **lemme** (`lemma`).\n",
+    "Si la lemme n’est pas un signe de ponctuation, elle est ajoutée aux listes `forms` et `lemmas`.\n",
+    "Enfin, si la lemme n’est ni une ponctuation ni un mot vide (*stopword*), elle est ajoutée à la liste `no_stop`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forms = []\n",
+    "lemmas = []\n",
+    "no_stop = []\n",
+    "\n",
+    "for token in genesis_lem:\n",
+    "    form = token[\"word\"]\n",
+    "    lemma = token[\"lemma\"]\n",
+    "\n",
+    "    if lemma not in string.punctuation:\n",
+    "        forms.append(form)\n",
+    "        lemmas.append(lemma)\n",
+    "\n",
+    "    if lemma not in string.punctuation and lemma not in stopwords:\n",
+    "        no_stop.append(lemma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "print(\"Nombre total de formes :\", len(forms))\n",
+    "print(\"Nombre total de lemmes :\", len(lemmas))\n",
+    "print(\"Nombre de lemmes sans stopwords :\", len(no_stop))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce code permet de générer les **nuage de mots**.\n",
+    "<br><br><br>\n",
+    "Je remercie **Marianne Reboul** pour ce code, ainsi que pour l’idée générale de ce notebook, qui reprend en grande partie l’un de ses [supports pédagogiques](https://colab.research.google.com/github/OdysseusPolymetis/journees_cluster5b_7/blob/main/3_nlp_lat_gk.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wordcloud import WordCloud\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "def create_word_cloud(words_list, title):\n",
+    "    text = ' '.join(words_list)\n",
+    "\n",
+    "    radius = 495\n",
+    "\n",
+    "    diameter = radius * 2\n",
+    "    center = radius\n",
+    "    x, y = np.ogrid[:diameter, :diameter]\n",
+    "    mask = (x - center) ** 2 + (y - center) ** 2 > radius ** 2\n",
+    "    mask = 255 * mask.astype(int)\n",
+    "\n",
+    "    mask_rgba = np.dstack((mask, mask, mask, 255 - mask))\n",
+    "\n",
+    "    wordcloud = WordCloud(repeat=False, width=diameter, height=diameter,\n",
+    "                          background_color=None, mode=\"RGBA\", colormap='plasma',\n",
+    "                          mask=mask_rgba).generate(text)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    plt.imshow(wordcloud, interpolation='bilinear')\n",
+    "    plt.title(title)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_word_cloud(forms, 'Types')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_word_cloud(lemma, 'Lemmas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_word_cloud(no_stop, 'Lemmas sans mots vides')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette cellule permet de télécharger les formes et les lemmes obtenus.<br>\n",
+    "Ils pourront ensuite être importés dans Voyant Tools pour une analyse complémentaire."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with open(\"/content/forms.txt\", \"w\", encoding=\"utf8\") as f, open(\"/content/lemmas.txt\", \"w\", encoding=\"utf8\") as f2, open(\"/content/pullito.txt\", \"w\", encoding=\"utf8\") as f3:\n",
+    "    f.write(\"\\n\".join(forms))\n",
+    "    f2.write(\"\\n\".join(lemmas))\n",
+    "    f3.write(\"\\n\".join(no_stop))"
+   ]
   }
  ],
  "metadata": {
