--- a/notebooks/lemmatisation.ipynb
+++ b/notebooks/lemmatisation.ipynb
@@ -452,129 +452,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cette cellule parcourt la liste des tokens issus de la lemmatisation. Pour chaque mot, elle extrait sa **forme originale** (`form`) et sa **lemme** (`lemma`).\n",
-    "Si la lemme n’est pas un signe de ponctuation, elle est ajoutée aux listes `forms` et `lemmas`.\n",
-    "Enfin, si la lemme n’est ni une ponctuation ni un mot vide (*stopword*), elle est ajoutée à la liste `no_stop`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forms = []\n",
-    "lemmas = []\n",
-    "no_stop = []\n",
-    "\n",
-    "for token in genesis_lem:\n",
-    "    form = token[\"word\"]\n",
-    "    lemma = token[\"lemma\"]\n",
-    "\n",
-    "    if lemma not in string.punctuation:\n",
-    "        forms.append(form)\n",
-    "        lemmas.append(lemma)\n",
-    "\n",
-    "    if lemma not in string.punctuation and lemma not in stopwords:\n",
-    "        no_stop.append(lemma)"
+    "Je remercie **Marianne Reboul** pour ce code, qui reprend en grande partie l’un de ses [supports pédagogiques](https://colab.research.google.com/github/OdysseusPolymetis/journees_cluster5b_7/blob/main/3_nlp_lat_gk.ipynb)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "print(\"Nombre total de formes :\", len(forms))\n",
-    "print(\"Nombre total de lemmes :\", len(lemmas))\n",
-    "print(\"Nombre de lemmes sans stopwords :\", len(no_stop))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ce code permet de générer les **nuage de mots**.\n",
-    "<br><br><br>\n",
-    "Je remercie **Marianne Reboul** pour ce code, ainsi que pour l’idée générale de ce notebook, qui reprend en grande partie l’un de ses [supports pédagogiques](https://colab.research.google.com/github/OdysseusPolymetis/journees_cluster5b_7/blob/main/3_nlp_lat_gk.ipynb)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "def create_word_cloud(words_list, title):\n",
-    "    text = ' '.join(words_list)\n",
-    "\n",
-    "    radius = 495\n",
-    "\n",
-    "    diameter = radius * 2\n",
-    "    center = radius\n",
-    "    x, y = np.ogrid[:diameter, :diameter]\n",
-    "    mask = (x - center) ** 2 + (y - center) ** 2 > radius ** 2\n",
-    "    mask = 255 * mask.astype(int)\n",
-    "\n",
-    "    mask_rgba = np.dstack((mask, mask, mask, 255 - mask))\n",
-    "\n",
-    "    wordcloud = WordCloud(repeat=False, width=diameter, height=diameter,\n",
-    "                          background_color=None, mode=\"RGBA\", colormap='plasma',\n",
-    "                          mask=mask_rgba).generate(text)\n",
-    "\n",
-    "    plt.figure(figsize=(10, 10))\n",
-    "    plt.imshow(wordcloud, interpolation='bilinear')\n",
-    "    plt.title(title)\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_word_cloud(forms, 'Types')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_word_cloud(lemma, 'Lemmas')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_word_cloud(no_stop, 'Lemmas sans mots vides')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Cette cellule permet de télécharger les formes et les lemmes obtenus.<br>\n",
-    "Ils pourront ensuite être importés dans Voyant Tools pour une analyse complémentaire."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "with open(\"/content/forms.txt\", \"w\", encoding=\"utf8\") as f, open(\"/content/lemmas.txt\", \"w\", encoding=\"utf8\") as f2, open(\"/content/pullito.txt\", \"w\", encoding=\"utf8\") as f3:\n",
-    "    f.write(\"\\n\".join(forms))\n",
-    "    f2.write(\"\\n\".join(lemmas))\n",
-    "    f3.write(\"\\n\".join(no_stop))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
